[x] Add styles to MovieDetails componet. [ ] Refactor MovieDetails componet. [ ] Add castCarousel and similarTitlesCarousel in MovieDetails componet. [ ] Fix bug in infinite scroll:                     (After mounting the component and the last element is visible, fetch is not done).

--- a/src/components/Movie/Movie.module.css
+++ b/src/components/Movie/Movie.module.css
@@ -3,4 +3,5 @@
     height: 100%;
     object-fit: fill;
     border-radius: 5px;
+    cursor: pointer;
 }
